# visual_dm

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mocharc.cjs  .percy.yml  .pre-commit-config.yaml  .taskmasterconfig  .windsurfrules  ASSEMBLY_CONSOLIDATION_COMPLETE.md  ASSEMBLY_CONSOLIDATION_FINAL_SUCCESS.md  Assembly-CSharp.csproj  BACKEND_TEST_STATUS_REPORT.md  Comprehensive Visual DM 6 Project Overvi.md  DIALOGUE_SYSTEM_COMPLIANCE_REPORT.md  DREAMFORGE_COMPLETE_PROJECT_SUMMARY.md  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  MOTIF_COMPLIANCE_REPORT.md  NAMESPACE_ASSEMBLY_FIX.md  NAMESPACE_ASSEMBLY_FIX_APPLIED.md  NAMESPACE_ASSEMBLY_FIX_COMPLETE.md  PHASE_10_SPRITE_PLACEHOLDER_PLANNING_RESULTS.md  PHASE_8_BACKEND_INTEGRATION_TESTING_RESULTS.md  README-task-master.md  README.md  REGION_SYSTEM_COMPLIANCE_REPORT.md  RELIGION_COMPLIANCE_REPORT.md  RUMOR_SYSTEM_COMPLIANCE_REPORT.md  SECURITY.md  TASK_18_AUTOMATED_TESTING_SUITE_COMPLETE.md  UNITY_CONSOLE_ITERATION_SUCCESS.md  UNITY_FIX_GUIDE.md  UNITY_SAFE_MODE_SOLUTION.md  Unity Errors Temp.xml  VDM.Core.csproj  VDM.Modules.csproj  VDM.Runtime.csproj  (+110 more)
backend/: ARCHITECTURE_REFACTOR_SUMMARY.md  DATA_SYSTEM_TEST_RESULTS.md  DIALOGUE_INFRASTRUCTURE_SEPARATION_FIX_SUMMARY.md  DIALOGUE_POI_INTEGRATION_FIX_SUMMARY.md  Dockerfile  EQUIPMENT_INFRASTRUCTURE_SEPARATION_SUMMARY.md  ESPIONAGE_BUSINESS_LOGIC_SEPARATION_SUMMARY.md  ESPIONAGE_SEPARATION_SUMMARY.md  GAME_TIME_REFACTOR_SUMMARY.md  INVENTORY_INFRASTRUCTURE_SEPARATION_SUMMARY.md  MAGIC_INFRASTRUCTURE_SEPARATION_SUMMARY.md  README.md  alembic.ini  (+40 more)
(+11431 files in other folders)
